# learnbgfx

./: CMakeLists.txt  README.md
cmake/: BgfxHelper.cmake
learnbgfx/: CMakeLists.txt
learnbgfx/shaders/: common.sh  fs_shader.sc  varying.def.sc  vs_shader.sc
learnbgfx/shaders/colors/: fs_colors.sc  varying.def.sc  vs_colors.sc
learnbgfx/shaders/light_cube/: fs_light_cube.sc  varying.def.sc  vs_light_cube.sc
learnbgfx/src/: Camera.h  Program.h  Texture.h  main.cc
